Bug 65315 - incorrect alignment of local variable with aligned attribute
Summary: incorrect alignment of local variable with aligned attribute
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: unknown
: P3 normal
Target Milestone: 5.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-04 18:38 UTC by Steve Ellcey
Modified: 2015-10-21 23:43 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments
Test case (189 bytes, text/x-csrc)
2015-03-04 18:38 UTC, Steve Ellcey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Ellcey 2015-03-04 18:38:24 UTC
Created attachment 34953 [details]
Test case

When GCC has multiple local variables with different aligned attributes on them, it creates an aligned block of space aligned to the least aligned variable instead of the most aligned variable.

In the attached program, when run on MIPS, GCC is creating a 32 byte aligned
block of memory for foo1, foo3, and foo4 and a 128 byte aligned memory block
for foo2.  foo3 and foo4 should have 128 byte aligned memory.

I thought the problem was in stack_var_cmp where it checks the alignment of
two variables and returns '(int) largeb - (int) largea' to sort the variables
based on their alignment but when I swapped the two arguments I got an ICE
in expand_stack_vars [gcc_assert (large_base != NULL);].

It also tried changing:

large_align = stack_vars[stack_vars_sorted[0]].alignb * BITS_PER_UNIT;

to

large_align = stack_vars[stack_vars_sorted[n-1]].alignb * BITS_PER_UNIT;

but that caused the same ICE.

It may be that we need a loop to check the alignment of each variable.
Comment 1 Steve Ellcey 2015-03-04 18:58:53 UTC
It might be easier to see this bug if you apply this patch:

diff --git a/gcc/cfgexpand.c b/gcc/cfgexpand.c
index 7dfe1f6..7beb00e 100644
--- a/gcc/cfgexpand.c
+++ b/gcc/cfgexpand.c
@@ -973,6 +973,8 @@ expand_stack_vars (bool (*pred) (size_t), struct sta
ck_vars_data *data)
 	  i = stack_vars_sorted[si];
 	  alignb = stack_vars[i].alignb;
 
+	  gcc_assert (alignb*BITS_PER_UNIT <= large_align);
+
 	  /* Stop when we get to the first decl with "small" alignment.  */
 	  if (alignb * BITS_PER_UNIT <= MAX_SUPPORTED_STACK_ALIGNMENT)
 	    break;


This way you get an ICE instead of just incorrectly aligned vectors.
Comment 2 Steve Ellcey 2015-03-04 19:51:29 UTC
I submitted a proposed fix.

https://gcc.gnu.org/ml/gcc-patches/2015-03/msg00244.html
Comment 3 Steve Ellcey 2015-03-05 16:34:34 UTC
Author: sje
Date: Thu Mar  5 16:34:03 2015
New Revision: 221219

URL: https://gcc.gnu.org/viewcvs?rev=221219&root=gcc&view=rev
Log:
2015-03-05  Steve Ellcey  <sellcey@imgtec.com>

	PR middle-end/65315
	* cfgexpand.c (expand_stack_vars): Update large_align to maximum
	needed alignment.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/cfgexpand.c
Comment 4 Steve Ellcey 2015-10-21 23:43:37 UTC
A patch for this was checked in before 5.0 branched.