re PR middle-end/65315 (incorrect alignment of local variable with aligned attribute)

2015-03-05  Steve Ellcey  <sellcey@imgtec.com>

	PR middle-end/65315
	* cfgexpand.c (expand_stack_vars): Update large_align to maximum
	needed alignment.

From-SVN: r221219